project cleanup for JDK9 build