@@ -27,8 +27,7 @@ package sun.java2d.marlin;
 
 import java.util.Arrays;
 import sun.java2d.pipe.AATileGenerator;
-//import jdk.internal.misc.Unsafe;
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
 
 final class MarlinTileGenerator implements AATileGenerator, MarlinConst {
 
